2016-05-03  Chris Dumez  <cdumez@apple.com>

        Unreviewed, rolling out r199259 and r200161.

        Seems to have caused a ~1.2% PLT regression on iOS

        Reverted changesets:

        "[iOS WK2] WKWebViews should consult ancestor UIScrollViews to
        determine tiling area"
        https://bugs.webkit.org/show_bug.cgi?id=156429
        http://trac.webkit.org/changeset/199259

        "[iOS WK2] When determining tile size, check whether ancestor
        UIScrollViews are actually scrollable"
        https://bugs.webkit.org/show_bug.cgi?id=157107
        http://trac.webkit.org/changeset/200161

2016-05-03  Dean Jackson  <dino@apple.com>

        CSS Grid should be an experimental feature flag
        https://bugs.webkit.org/show_bug.cgi?id=157327
        <rdar://problem/26075147>

        Reviewed by Anders Carlsson.

        The CSS Grid Layout runtime flag was exposed by
        a WebKit preference. It was in the experimental
        section but was missing the "Experimental" prefix.

        It was also missing the human readable description.

        Lastly, there is no need for the C API for experimental
        features.

        * Shared/WebPreferencesDefinitions.h:
        * UIProcess/API/C/WKPreferences.cpp:
        (WKPreferencesSetCSSGridLayoutEnabled): Deleted.
        (WKPreferencesGetCSSGridLayoutEnabled): Deleted.
        * UIProcess/API/C/WKPreferencesRefPrivate.h:
        * WebProcess/InjectedBundle/InjectedBundle.cpp:
        (WebKit::InjectedBundle::overrideBoolPreferenceForTestRunner):
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::updatePreferences):

2016-05-03  Alex Christensen  <achristensen@webkit.org>

        Remove firing assertion when redirecting
        https://bugs.webkit.org/show_bug.cgi?id=155800
        rdar://25299194

        Reviewed by Sam Weinig.

        * NetworkProcess/cocoa/NetworkSessionCocoa.mm: